data/derived/comb/progs/unify/prog1735.ml.out
Characters 156-169:
  let _ = Printf.printf string_of_int addit in
                        ^^^^^^^^^^^^^
Error: This expression has type int -> string
       but an expression was expected of type
         ('a -> 'b, out_channel, unit) format =
           ('a -> 'b, out_channel, unit, unit, unit, unit)
           CamlinternalFormatBasics.format6
